[project]
name = "streamlit-prometheus"
version = "0.1.0"
description = "An easy to configure prometheus server for streamlit apps"
readme = "README.md"
authors = [
    { name = "Moritz Baeumel", email = "moritzbaeumnel@gmail.com" }
]
requires-python = ">=3.13.1"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
